# soletta-demos

factory-monitor/: CMakeLists.txt
